--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,162 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
+* {
+    padding: 0;
     margin: 0;
-    padding: 0; 
- }
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: Arial, Arial, Helvetica,sans-serif;
+    font-size: 14px;
+}
+
+body {
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgb(243, 243, 243);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.instagram_container {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    width: 60%;
+    height: 100vh;
+}
+
+.instagram_celular {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+
+}
+
+.instagram_celular img {
+    height: 50rem;
+}
+
+.instagram_continuar_sessao {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 50%;
+    min-height: 34rem;
+    
+}
+
+.instagram_container_generico {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    width: 100%;
+    padding: 1.3rem 0;
+    border: 1px solid lightgray;
+}
+
+.instagram_container_generico:nth-child(1){
+    min-height: 19rem;
+}
+
+.instagram_logo {
+     height: 3rem;
+}
+
+.imagem_perfil{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.imagem_perfil img{
+    height: 6rem;
+}
+
+.instagram_login{
+    background-color: #0095f6;
+    color:#ffffff;
+    padding: 8px;
+    border-radius: 4px;
+}
+
+.instagram_logout{
+    color:#0095f6;
+    margin-top: 1rem;
+} 
+
+.trocar_conta_cadastrar_conta{
+    color:rgb(160, 160, 160);
+}
+
+.link_azul{
+    color: #0095f6;
+}
+
+.baixar_aplicativo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1.3rem 0;
+}
+
+.baixar_opcoes {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+
+.download_aplicativo{
+    height: 3rem;
+    width: 10rem;
+    background-size: cover;
+}
+
+.download_aplicativo:nth-child(1){
+    background-image: url('../resources/img/apple-button.png');
+}
+
+.download_aplicativo:nth-child(2){
+    background-image: url('../resources/img/googleplay-button.png');
+}
+
+
+@media (max-width: 1024px) {
+    .instagram_container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 650px) {
+    body {
+        background-color: #ffffff;
+    }
+
+
+    .instagram_container {
+        width: 90%;
+    }
+
+    .instagram_celular{
+        display: none;
+    }
+
+    .instagram_continuar_sessao{
+        width: 100%;
+    }
+
+    .instagram_container_generico{
+        border: 1px solid transparent;
+    }
+}
+
+
