--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,11 +122,11 @@ body {
 }
 
 .download_aplicativo:nth-child(1){
-    background-image: url('../resources/img/apple-button.png');
+    background-image: url('../img/apple-button.png');
 }
 
 .download_aplicativo:nth-child(2){
-    background-image: url('../resources/img/googleplay-button.png');
+    background-image: url('../img/googleplay-button.png');
 }
 
 
